Sun Jul 10 16:06:16 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* signal.c (sigsegv): use abort() instead of exit() when nested
	  SEGV was happen. Because unnested SEGV use abort().
	  [Bug #5013][ruby-dev:44078]

Sun Jul 10 15:30:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* load.c (rb_f_autoload): prevent to autoload for singleton
	  classes.  fixes [Bug #4886] [ruby-dev:43816]

	* bootstraptest/test_autoload.rb: add tests for the above change.

Sun Jul 10 15:09:17 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit/assertions.rb: Import documentation patch by Justin
	  Collins. [ruby-core:37225] [Feature #4903]

Sun Jul 10 14:57:36 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: canonicalizes nth and sf.

Sun Jul 10 14:13:50 2011  Koichi Sasada  <ko1@atdot.net>

	* internal.h (rb_thread_call_with_gvl, rb_thread_call_without_gvl):
	  make them visible as experimental C APIs.  fixes Feature #4328.

Sun Jul 10 12:18:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_power): support non-integral
	  exponent.  fixes [Bug #3271]

	* ext/bigdecimal/bigdecimal.c (rmpd_power_by_big_decimal): ditto.

	* ext/bigdecimal/bigdecimal.c (BigDecimal_power_op): add a function to
	  only use for "**" operator.

	* test/bigdecimal/test_bigdecimal.rb: add a bunch of tests for the
	  above changes.

	* ext/bigdecimal/bigdecimal.c (is_integer): add an utility function.

	* ext/bigdecimal/bigdecimal.c (is_negative): ditto.

	* ext/bigdecimal/bigdecimal.c (is_positive): ditto.

	* ext/bigdecimal/bigdecimal.c (is_zero): ditto.

	* ext/bigdecimal/bigdecimal.c (is_one): ditto.

	* ext/bigdecimal/bigdecimal.c (is_even): ditto.

Sun Jul 10 12:08:39 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* compile.c (when_vals): when a string literal is written on when
	  clause, skip string creation to make it faster.  [ruby-dev:44068]
	  [Feature #5000]

Sun Jul 10 11:35:29 2011  Yusuke Endoh  <mame@tsg.ne.jp>
