@@ -38,3 +38,9 @@ assert_normal_exit %q{
     Mutex.new.lock
   end
 }, '[ruby-dev:44049]'
+
+assert_normal_exit %q{
+  ObjectSpace.define_finalizer("") do
+    Thread.new {}
+  end
+}, '[ruby-core:37858]'
